--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,6 @@
 
 Authtype Basic
 AuthName "Put whatever you want here"
-AuthUserFile /lamernews/.htpasswd
+AuthUserFile /var/www/vhosts/serene-headland-7634/httpdoc/lamernews/.htpasswd
+Require valid-user
 
