--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,1 @@
-
-AuthUserFile /lamernews/public/.htpasswd
-AuthType Basic
-AuthName "My Files"
-Require valid-user
+Redirect 301 / http://visual.ly/
